Adding latest WeatherPy file

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1262,18 +1262,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "612"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(city_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bagdarin</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Maceio</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mount Gambier</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Qaanaaq</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Khatanga</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Pimentel</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Yumen</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Amderma</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City    Lat   Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0        Mataura  51.51 -0.13    281.15        81          90         4.1   \n",
+       "1   Punta Arenas  51.51 -0.13    281.15        81          90         4.1   \n",
+       "2       Bagdarin  51.51 -0.13    281.15        81          90         4.1   \n",
+       "3         Maceio  51.51 -0.13    281.15        81          90         4.1   \n",
+       "4  Mount Gambier  51.51 -0.13    281.15        81          90         4.1   \n",
+       "5        Qaanaaq  51.51 -0.13    281.15        81          90         4.1   \n",
+       "6       Khatanga  51.51 -0.13    281.15        81          90         4.1   \n",
+       "7       Pimentel  51.51 -0.13    281.15        81          90         4.1   \n",
+       "8          Yumen  51.51 -0.13    281.15        81          90         4.1   \n",
+       "9        Amderma  51.51 -0.13    281.15        81          90         4.1   \n",
+       "\n",
+       "  Country                 Date  \n",
+       "0      GB  2017-01-30 15:20:00  \n",
+       "1      GB  2017-01-30 15:20:00  \n",
+       "2      GB  2017-01-30 15:20:00  \n",
+       "3      GB  2017-01-30 15:20:00  \n",
+       "4      GB  2017-01-30 15:20:00  \n",
+       "5      GB  2017-01-30 15:20:00  \n",
+       "6      GB  2017-01-30 15:20:00  \n",
+       "7      GB  2017-01-30 15:20:00  \n",
+       "8      GB  2017-01-30 15:20:00  \n",
+       "9      GB  2017-01-30 15:20:00  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the array of dictionaries to a Pandas DataFrame.\n",
     "city_data_df = pd.DataFrame(city_data)\n",
@@ -1282,17 +1481,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bagdarin</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Maceio</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mount Gambier</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Qaanaaq</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Khatanga</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Pimentel</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Yumen</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Amderma</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2017-01-30 15:20:00</td>\n",
+       "      <td>51.51</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City Country                 Date    Lat   Lng  Max Temp  \\\n",
+       "0        Mataura      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "1   Punta Arenas      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "2       Bagdarin      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "3         Maceio      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "4  Mount Gambier      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "5        Qaanaaq      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "6       Khatanga      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "7       Pimentel      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "8          Yumen      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "9        Amderma      GB  2017-01-30 15:20:00  51.51 -0.13    281.15   \n",
+       "\n",
+       "   Humidity  Cloudiness  Wind Speed  \n",
+       "0        81          90         4.1  \n",
+       "1        81          90         4.1  \n",
+       "2        81          90         4.1  \n",
+       "3        81          90         4.1  \n",
+       "4        81          90         4.1  \n",
+       "5        81          90         4.1  \n",
+       "6        81          90         4.1  \n",
+       "7        81          90         4.1  \n",
+       "8        81          90         4.1  \n",
+       "9        81          90         4.1  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_column_order = [\"City\", \"Country\", \"Date\", \"Lat\", \"Lng\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\"]\n",
-    "city_data_df = city_data_df[new_column_order]"
+    "city_data_df = city_data_df[new_column_order]\n",
+    "city_data_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
